@@ -2,8 +2,8 @@
  *
  * OBJECTS.C - Object addition and search functions for Nagios
  *
- * Copyright (c) 1999-2005 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 12-26-2005
+ * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
+ * Last Modified: 02-24-2006
  *
  * License:
  *
@@ -5996,6 +5996,16 @@ int free_object_data(void){
 	/* free memory for the service escalation list */
 	this_serviceescalation=serviceescalation_list;
 	while(this_serviceescalation!=NULL){
+
+		/* free memory for the contact group members */
+		this_contactgroupsmember=this_serviceescalation->contact_groups;
+		while(this_contactgroupsmember!=NULL){
+			next_contactgroupsmember=this_contactgroupsmember->next;
+			free(this_contactgroupsmember->group_name);
+			free(this_contactgroupsmember);
+			this_contactgroupsmember=next_contactgroupsmember;
+		        }
+
 		next_serviceescalation=this_serviceescalation->next;
 		free(this_serviceescalation->host_name);
 		free(this_serviceescalation->description);
@@ -6056,6 +6066,16 @@ int free_object_data(void){
 	/* free memory for the host escalation list */
 	this_hostescalation=hostescalation_list;
 	while(this_hostescalation!=NULL){
+
+		/* free memory for the contact group members */
+		this_contactgroupsmember=this_hostescalation->contact_groups;
+		while(this_contactgroupsmember!=NULL){
+			next_contactgroupsmember=this_contactgroupsmember->next;
+			free(this_contactgroupsmember->group_name);
+			free(this_contactgroupsmember);
+			this_contactgroupsmember=next_contactgroupsmember;
+		        }
+
 		next_hostescalation=this_hostescalation->next;
 		free(this_hostescalation->host_name);
 		free(this_hostescalation->escalation_period);
